--- a/index.html
+++ b/index.html
@@ -1,33 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+    crossorigin="anonymous" />
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/styles.css">
+
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
+  <header class="logo-container">
+    <img src="./images/logo.svg" alt="huddle logo" class="logo">
+  </header>
+  <section class="content-container">
+    <div class="image-container">
+      <img src="./images/illustration-mockups.svg" alt="drawing of mockup design" class="mockup">
+    </div>
+    <div class="text-container">
+      <h1 class="heading--main">Build The Community Your Fans Will Love</h1>
+      <p class="heading--sub">Huddle re-imagines the way we build communities. You have a voice, but so does your
+        audience.
+        Create connections with your users as you engage in genuine discussion.</p>
+      <button>Register</button>
+    </div>
+  </section>
+  <footer class="social-container">
+    <div class="social-logos">
+      <div class="social-logo">
+        <i class="fab fa-facebook-f"></i>
+      </div>
+      <div class="social-logo">
+        <i class="fab fa-twitter"></i>
+      </div>
+      <div class="social-logo">
+        <i class="fab fa-instagram"></i>
+      </div>
+    </div>
+  </footer>
 
-  Build The Community Your Fans Will Love
-
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
-
-  Register
-
-  <footer>
+  <!-- <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Your Name Here</a>.
     </p>
-  </footer>
+  </footer> -->
 </body>
+
 </html>
